--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    font-size: 64px;
+  }
+  
   body {
     @apply bg-gray-300;
-    font-size: 64px;
   }
 }
