--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-size: 64px;
-  }
-
   body {
     @apply bg-gray-300;
+  }
+
+  button {
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded
   }
 }
