feat: update on 20230116 - 1

--- a/public/index-static.css
+++ b/public/index-static.css
@@ -3,6 +3,6 @@
   background-origin: padding-box;
   background-size: 1100% 600%;
   width: 100%;
+  aspect-ratio: 5 / 7;
   height: auto;
-  padding-top: 140%;
 }
