--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,11 @@
 
       animation-name: reach-animation-logo-kf;
       animation-duration: 1.7s;
+      animation-delay: 0.5s;
       animation-timing-function: ease-in-out;
-      animation-iteration-count: infinite;
+      animation-iteration-count: 1;
+
+      opacity: 0;
     }
 
     @keyframes reach-animation-bar-kf {
@@ -95,8 +98,11 @@
 
       animation-name: reach-animation-bar-kf;
       animation-duration: 1.7s;
+      animation-delay: 0.5s;
       animation-timing-function: ease-in-out;
-      animation-iteration-count: infinite;
+      animation-iteration-count: 1;
+
+      opacity: 0;
     }
 
     & > .reach-animation-text {
@@ -111,7 +117,6 @@
       display: grid;
       grid-template-columns: repeat(5, minmax(0, 1fr));
       overflow: visible;
-      /* opacity: 0; */
     }
 
     @keyframes reach-animation-text-c1-kf {
@@ -171,11 +176,14 @@
 
     & > .reach-animation-text > .reach-animation-text-character {
       animation-duration: 1.7s;
+      animation-delay: 0.5s;
       animation-timing-function: ease-in-out;
-      animation-iteration-count: infinite;
+      animation-iteration-count: 1;
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
+
+      opacity: 0;
 
       /* height: 100%; */
       &.c1 {
