--- a/src/index.css
+++ b/src/index.css
@@ -223,4 +223,164 @@
       }
     }
   }
+
+  .match-introduction {
+    @keyframes mi-title-in {
+      0%    {transform: translateX(-25%); opacity: 0}
+      100%  {transform: translateX(0); opacity: 1}
+    }
+
+    .mi-title-in {
+      animation: mi-title-in 1s ease-in-out 0s 1 normal both;
+    }
+
+    .mi-subbtitle-in {
+      animation: mi-title-in 1s ease-in-out 0.5s 1 normal both;
+    }
+
+    @keyframes mi-teams-in {
+      0%    {transform: translateY(100%); opacity: 0}
+      100%  {transform: translateY(0); opacity: 1}
+    }
+
+    @keyframes mi-teams-out {
+      0%  {transform: translateY(0); opacity: 1}
+      100%    {transform: translateY(100%); opacity: 0}
+    }
+
+    .mi-teams-in {
+      animation: mi-teams-in 0.8s ease-in-out 0s 1 normal both;
+    }
+
+    .mi-teams-out {
+      animation: mi-teams-out 0.8s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-teams-team-out {
+      0%  {transform: translateX(0); opacity: 1}
+      100%    {transform: translateX(100%); opacity: 0}
+    }
+
+    .mi-teams-team-out {
+      animation: mi-teams-team-out 0.5s ease-out 0s 1 normal both;
+    }
+
+    @keyframes mi-teams-player-in {
+      0%    {transform: translateY(100%); opacity: 0}
+      100%  {transform: translateY(0); opacity: 1}
+    }
+
+    .mi-teams-player-in {
+      opacity: 0;
+      animation: mi-teams-player-in 0.8s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-team-colorBackground-in {
+      0%    {transform: translateY(100%)}
+      100%  {transform: translateY(0)}
+    }
+
+    @keyframes mi-team-colorBackground-out {
+      0%  {transform: translateY(0)}
+      100%    {transform: translateY(100%)}
+    }
+
+    .mi-team-colorBackground-in {
+      animation: mi-team-colorBackground-in 0.8s ease-in-out 0s 1 normal both;
+    }
+
+    .mi-team-colorBackground-out {
+      animation: mi-team-colorBackground-out 0.5s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-team-logoBackground-in {
+      0%    {transform: translateY(100%)}
+      100%  {transform: translateY(0)}
+    }
+
+    @keyframes mi-team-logoBackground-out {
+      0%  {transform: translateY(0)}
+      100%    {transform: translateY(100%)}
+    }
+
+    .mi-team-logoBackground-in {
+      animation: mi-team-logoBackground-in 0.8s ease-in-out 0.25s 1 normal both;
+    }
+
+    .mi-team-logoBackground-out {
+      animation: mi-team-logoBackground-out 0.5s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-team-team-in {
+      0%    {transform: translateY(-100%)}
+      100%  {transform: translateY(0)}
+    }
+
+    @keyframes mi-team-team-out {
+      0%  {transform: translateY(0)}
+      100%    {transform: translateY(-100%)}
+    }
+
+    .mi-team-team-in {
+      animation: mi-team-team-in 0.8s ease-in-out 0s 1 normal both;
+    }
+
+    .mi-team-team-out {
+      animation: mi-team-team-out 0.5s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-team-player-in {
+      0%    {transform: translateX(-25%); opacity: 0}
+      100%  {transform: translateX(0); opacity: 1}
+    }
+
+    @keyframes mi-team-player-out {
+      0%  {transform: translateX(0); opacity: 1}
+      100%    {transform: translateX(25%); opacity: 0}
+    }
+
+    .mi-team-player-in {
+      animation: mi-team-player-in 0.8s ease-in-out 0.8s 1 normal both;
+    }
+
+    .mi-team-player-out {
+      animation: mi-team-player-out 0.5s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-team-activePlayer-in {
+      0%    {transform: translateX(-25%); opacity: 0}
+      100%  {transform: translateX(0); opacity: 1}
+    }
+
+    @keyframes mi-team-activePlayer-out {
+      0%  {transform: translateX(0); opacity: 1}
+      100%    {transform: translateX(25%); opacity: 0}
+    }
+
+    .mi-team-activePlayer-in {
+      animation: mi-team-activePlayer-in 0.8s ease-in-out 2s 1 normal both;
+    }
+
+    .mi-team-activePlayer-out {
+      animation: mi-team-activePlayer-out 0.5s ease-in-out 0s 1 normal both;
+    }
+
+    @keyframes mi-team-activePlayerStat-in {
+      0%    {transform: translateX(-12%); opacity: 0}
+      100%  {transform: translateX(0); opacity: 1}
+    }
+
+    @keyframes mi-team-activePlayerStat-out {
+      0%  {transform: translateX(0); opacity: 1}
+      100%    {transform: translateX(12%); opacity: 0}
+    }
+
+    .mi-team-activePlayerStat-in {
+      animation: mi-team-activePlayerStat-in 0.8s ease-in-out 0.25s 1 normal both;
+    }
+
+    .mi-team-activePlayerStat-out {
+      animation: mi-team-activePlayerStat-out 0.5s ease-in-out 0.25s 1 normal both;
+    }
+  }
 }
