--- a/src/index.css
+++ b/src/index.css
@@ -443,12 +443,6 @@
   }
 
   .tournament-weekly-report {
-    opacity: 0;
-
-    &[data-active=true] {
-      opacity: 1;
-    }
-
     @keyframes twr-title-in {
       0%    {transform: translateX(-150%)}
       100%  {transform: translateX(0)}
@@ -459,11 +453,7 @@
     }
 
     .twr-title {
-      animation: twr-title-out .8s ease-in-out 0s 1 normal both;
-
-      &[data-active=true] {
-        animation: twr-title-in .8s ease-in-out 0s 1 normal both;
-      }
+      animation: twr-title-in .8s ease-in-out 0s 1 normal both;
     }
 
     @keyframes twr-team-ranking-row-in {
@@ -482,6 +472,25 @@
 
       &[data-active=true] .twr-team-ranking-row {
         animation: twr-team-ranking-row-in .6s ease-in-out 0s 1 normal both;
+      }
+    }
+
+    @keyframes twr-chart-chart-in {
+      0%    {transform: translateY(1080px)}
+      100%  {transform: translateY(0)}
+    }
+    @keyframes twr-chart-chart-out {
+      0%  {transform: translateX(0); opacity: 1}
+      100%    {transform: translateX(200px); opacity: 0}
+    }
+
+    .twr-chart {
+      & .twr-chart-chart {
+        animation: twr-chart-chart-out .6s ease-in-out 0s 1 normal both;
+      }
+
+      &[data-active=true] .twr-chart-chart {
+        animation: twr-chart-chart-in .6s ease-in-out 0s 1 normal both;
       }
     }
 
