--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     @apply w-full max-w-3xl;
   }
 
-  input {
+  input:not([type='checkbox']) {
     @apply border border-neutral-400 focus:border-neutral-600 py-1 px-2 rounded bg-white text-black;
   }
 }
