--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,10 @@
 
   .reach-animation {
     position: absolute;
-    inset: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     text-align: center;
 
     & > .reach-background {
