--- a/src/pages/v2/obs/scenes/realtime/byTheme/sakura/components/index.module.css
+++ b/src/pages/v2/obs/scenes/realtime/byTheme/sakura/components/index.module.css
@@ -62,3 +62,374 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
+
+@keyframes reach-animation-bar-kf {
+  0% {
+    transform: translate(-50%, 50%) scale(0.1);
+    opacity: 1;
+  }
+  1.75% {
+    transform: translate(-50%, 50%) scale(1.2);
+    opacity: 1;
+  }
+  3.5% {
+    transform: translate(-50%, 50%) scale(1);
+    opacity: 1;
+  }
+  5.25% {
+    transform: translate(-50%, 50%) scale(1.05);
+    opacity: 1;
+  }
+  7% {
+    transform: translate(-50%, 50%) scale(0.98);
+    opacity: 1;
+  }
+  8.75% {
+    transform: translate(-50%, 50%) scale(1);
+    opacity: 1;
+  }
+  24% {
+    transform: translate(-50%, 50%) scale(1);
+    opacity: 1;
+  }
+  25.75% {
+    transform: translate(-50%, 50%) scale(0.98);
+    opacity: 1;
+  }
+  27.5% {
+    transform: translate(-50%, 50%) scale(1.05);
+    opacity: 1;
+  }
+  32% {
+    transform: translate(-50%, 50%) scale(0.1);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, 50%) scale(0.1);
+    opacity: 0;
+  }
+}
+
+@keyframes reach-animation-logo-kf {
+  0% {
+    transform: translate(-100%, -50%);
+    opacity: 0;
+  }
+  17% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+  76% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+  92% {
+    transform: translate(-50%, -60%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, -70%);
+    opacity: 0;
+  }
+}
+
+@keyframes reach-animation-background-kf {
+  0% {
+    transform: scaleY(0);
+  }
+  17% {
+    transform: scaleY(1);
+  }
+  92% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0);
+  }
+}
+
+@keyframes reach-animation-text-c1-kf {
+  0% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  32% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  32% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  36% {
+    transform: translate(0, 12%);
+    opacity: 1;
+  }
+  38% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  92% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  98% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+}
+
+@keyframes reach-animation-text-c2-kf {
+  0% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  36% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  37% {
+    transform: translate(0, -25%);
+    opacity: 0.8;
+  }
+  40% {
+    transform: translate(0, 12%);
+    opacity: 1;
+  }
+  42% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  88% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  94% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+}
+
+@keyframes reach-animation-text-c3-kf {
+  0% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  40% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  41% {
+    transform: translate(0, -25%);
+    opacity: 0.8;
+  }
+  44% {
+    transform: translate(0, 12%);
+    opacity: 1;
+  }
+  46% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  84% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  90% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+}
+
+@keyframes reach-animation-text-c4-kf {
+  0% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  44% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  45% {
+    transform: translate(0, -25%);
+    opacity: 0.8;
+  }
+  48% {
+    transform: translate(0, 12%);
+    opacity: 1;
+  }
+  50% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  80% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  86% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+}
+
+@keyframes reach-animation-text-c5-kf {
+  0% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  48% {
+    transform: translate(0, -25%);
+    opacity: 0;
+  }
+  49% {
+    transform: translate(0, -25%);
+    opacity: 0.8;
+  }
+  52% {
+    transform: translate(0, 12%);
+    opacity: 1;
+  }
+  54% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  76% {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+  82% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0%);
+    opacity: 0;
+  }
+}
+
+.reach-animation {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+
+  & > :global(.reach-background) {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: scaleY(0);
+    transform-origin: center;
+
+    animation-name: reach-animation-background-kf;
+    animation-duration: 1.7s;
+    animation-delay: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+  }
+
+  & > :global(.reach-animation-logo) {
+    position: absolute;
+    width: 38%;
+    aspect-ratio: 1 / 1;
+    left: 50%;
+    top: 38%;
+    transform: translate(-50%, -50%);
+    transform-origin: center;
+
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    animation-name: reach-animation-logo-kf;
+    animation-duration: 1.7s;
+    animation-delay: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+
+    opacity: 0;
+  }
+
+  & > :global(.reach-animation-bar) {
+    position: absolute;
+    width: 55%;
+    aspect-ratio: 10 / 1;
+    left: 50%;
+    bottom: 20%;
+    transform: translate(-50%, 50%) scale(0.1);
+    transform-origin: center;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    animation-name: reach-animation-bar-kf;
+    animation-duration: 1.7s;
+    animation-delay: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+
+    opacity: 0;
+  }
+
+  & > :global(.reach-animation-text) {
+    position: absolute;
+    width: 48%;
+    aspect-ratio: 3.5 / 1;
+    left: 50%;
+    bottom: 20%;
+    transform: translate(-50%, 50%);
+    transform-origin: center;
+
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    overflow: visible;
+  }
+
+  & > :global(.reach-animation-text > .reach-animation-text-character) {
+    animation-duration: 1.7s;
+    animation-delay: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    opacity: 0;
+
+    /* height: 100%; */
+    &:global(.c1) {
+      animation-name: reach-animation-text-c1-kf;
+    }
+    &:global(.c2) {
+      animation-name: reach-animation-text-c2-kf;
+    }
+    &:global(.c3) {
+      animation-name: reach-animation-text-c3-kf;
+    }
+    &:global(.c4) {
+      animation-name: reach-animation-text-c4-kf;
+    }
+    &:global(.c5) {
+      animation-name: reach-animation-text-c5-kf;
+    }
+  }
+}
