--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,23 @@
       position: relative;
     }
   }
+  @keyframes fadeInFromLeftDelay1s {
+    0% {
+      opacity: 0;
+      left: -15px;
+      position: relative;
+    }
+    50% {
+      opacity: 0;
+      left: -15px;
+      position: relative;
+    }
+    100% {
+      opacity: 1;
+      left: 0px;
+      position: relative;
+    }
+  }
   @keyframes scrollFromRightToLeft {
     0% {
       transform: translateX(150%);
