--- a/public/index-static.css
+++ b/public/index-static.css
@@ -25,7 +25,7 @@
 
 @font-face {
   font-family: 'AdobeZh';
-  src: url('fonts/adobe-zh.otf') format("opentype");
+  src: url('fonts/adobe-zh.otf') format('opentype');
 }
 
 @font-face {
@@ -40,4 +40,15 @@
   width: 100%;
   aspect-ratio: 5 / 7;
   height: auto;
+}
+
+.mahjong-tile-v2 {
+  background-image: url('images/mahjong-tiles.png');
+  background-origin: padding-box;
+  background-size: 1100% 600%;
+  width: 1em;
+  aspect-ratio: 5 / 7;
+  height: auto;
+  font-size: inherit;
+  transform-origin: bottom left;
 }
