--- a/src/pages/v2/obs/scenes/realtime/byTheme/sakura/components/index.module.css
+++ b/src/pages/v2/obs/scenes/realtime/byTheme/sakura/components/index.module.css
@@ -433,3 +433,22 @@
     }
   }
 }
+
+.sakura-review-block {
+  width: calc-size(auto, size);
+  overflow: hidden;
+  position: relative;
+  opacity: 1;
+  transition:
+    width 0.7s,
+    opacity 1s;
+  display: flex;
+  justify-content: flex-end;
+}
+
+@starting-style {
+  .sakura-review-block {
+    width: 0;
+    opacity: 0;
+  }
+}
