--- a/src/pages/v2/obs/scenes/result-of-realtime-match/byTheme/sakura/index.module.css
+++ b/src/pages/v2/obs/scenes/result-of-realtime-match/byTheme/sakura/index.module.css
@@ -334,3 +334,20 @@
     animation: mi-ranking-ranking-out 0.5s ease-in-out 0s 1 normal both;
   }
 }
+
+.twr-players-ranking {
+  & :global(.twr-players-ranking-item) {
+    opacity: 0;
+    transform: translateY(100px);
+    transition:
+      opacity 0.5s,
+      transform 0.5s;
+    transition-delay: var(--transition-out-delay, 0s);
+  }
+
+  &[data-active='true'] :global(.twr-players-ranking-item) {
+    opacity: 1;
+    transform: translateY(0%);
+    transition-delay: var(--transition-in-delay, 0s);
+  }
+}
