--- a/src/pages/v2/obs/scenes/latest-statistics/byTheme/sakura/screens/SakuraLeagueStickerForTshirtScreen/index.module.css
+++ b/src/pages/v2/obs/scenes/latest-statistics/byTheme/sakura/screens/SakuraLeagueStickerForTshirtScreen/index.module.css
@@ -1,16 +1,16 @@
-.screenTitle {
+.item {
   & {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateY(100px);
     transition:
       opacity 0.5s,
       transform 0.5s;
     transition-delay: var(--transition-out-delay, 0s);
   }
 
-  &[data-active='true'] {
+  [data-active='true'] & {
     opacity: 1;
-    transform: translateX(0%);
+    transform: translateY(0%);
     transition-delay: var(--transition-in-delay, 0s);
   }
 }
